force-app/main/default/objects/ZP_Company__c/ZP_Company__c.object-meta.xml
<CustomObject>
    <label>ZP Company</label>
    <nameField>
        <displayFormat>COMPANY-{000000000}</displayFormat>
        <label>ZP Company Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZP Companies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>