force-app/main/default/objects/ZP_Company__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ZP Companies</relationshipLabel>
    <relationshipName>ZP_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>