force-app/main/default/objects/ZP_Company__c/fields/Accountant_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Lead_Id__c</fullName>
    <description>Captures Accountant Lead Id - in case accountant is just a lead in Shell Dashboard.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Accountant Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>