force-app/main/default/objects/ZP_Company__c/fields/ACH_Speed__c.field-meta.xml
<CustomField>
    <fullName>ACH_Speed__c</fullName>
    <label>ACH Speed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 day</fullName>
            </value>
            <value>
                <fullName>2 day</fullName>
            </value>
            <value>
                <fullName>Next day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>