force-app/main/default/objects/ZP_Company__c/fields/Company_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Lead_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>