force-app/main/default/objects/ZP_Company__c/fields/Company_Lead_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Lead_Last_Name__c</fullName>
    <description>Created as a failsafe for when the ZP Company records are created before GF Lead records.   
Company Lead Last Name, Company Lead Number of Employees, and Company Lead Source will be used to create the Lead in these instances.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Lead Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>