force-app/main/default/objects/ZP_Company__c/fields/Created_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Email__c</fullName>
    <externalId>true</externalId>
    <label>Created By Email</label>
    <type>Email</type>
</CustomField>