force-app/main/default/objects/ZP_Company__c/fields/Currently_Offer_Health_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Currently_Offer_Health_Benefits__c</fullName>
    <description>Associated with &quot;Does your business/client currently offer group health insurance?&quot; onboarding questions.</description>
    <label>Currently Offer Health Benefits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>NOT_YET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>