force-app/main/default/objects/ZP_Company__c/fields/Dedicated_Support_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Support_Contact_Id__c</fullName>
    <label>Dedicated Support Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>