force-app/main/default/objects/ZP_Company__c/fields/Fake_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fake_Reason__c</fullName>
    <description>Temporary field to add reasoning to understand why companies are marked as Fake</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Temporary field to add reasoning to understand why companies are marked as Fake</inlineHelpText>
    <label>Fake Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>