force-app/main/default/objects/ZP_Company__c/fields/Force_Lead_Creation__c.field-meta.xml
<CustomField>
    <fullName>Force_Lead_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Lead Creation</label>
    <type>Checkbox</type>
</CustomField>