force-app/main/default/objects/ZP_Company__c/fields/HI_Reason__c.field-meta.xml
<CustomField>
    <fullName>HI_Reason__c</fullName>
    <description>Identifies reason why HI Opportunity not created during onboarding.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HI Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>