force-app/main/default/objects/ZP_Company__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>The external record ID from the source system, company.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Source Model ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>