force-app/main/default/objects/ZP_Company__c/fields/IsChangedAccoutantLeadId__c.field-meta.xml
<CustomField>
    <fullName>IsChangedAccoutantLeadId__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures information if Accountant Lead Id was populated or changed on ZP Company.</description>
    <label>IsChangedAccoutantLeadId</label>
    <type>Checkbox</type>
</CustomField>