force-app/main/default/objects/ZP_Company__c/fields/Managing_Accounting_Firm_Id__c.field-meta.xml
<CustomField>
    <fullName>Managing_Accounting_Firm_Id__c</fullName>
    <description>Accounting Firm that currently manages the company. This will be updated as Sold_By__c on Account and Opportunity.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Managing Accounting Firm Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>