force-app/main/default/objects/ZP_Company__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Optional, short description of the processing result when an error or warning is encountered.</description>
    <label>Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>