force-app/main/default/objects/ZP_Company__c/fields/No_Update_Counter__c.field-meta.xml
<CustomField>
    <fullName>No_Update_Counter__c</fullName>
    <description>Number of times a given zp company record received without any update</description>
    <label>No Update Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>