force-app/main/default/objects/ZP_Company__c/fields/On_Boarding__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding__c</fullName>
    <defaultValue>true</defaultValue>
    <label>On Boarding</label>
    <type>Checkbox</type>
</CustomField>