force-app/main/default/objects/ZP_Company__c/fields/Onboarding_HI_Opp_Created__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_HI_Opp_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if new HI Opportunity was created during onboarding</description>
    <label>Onboarding HI Opp Created</label>
    <type>Checkbox</type>
</CustomField>