force-app/main/default/objects/ZP_Company__c/fields/Onboarding_Survey_Interested_Benefit_Opt__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Survey_Interested_Benefit_Opt__c</fullName>
    <description>Mapped with field onboarding_survey_interested_benefit_option. Identifies if company already has benefits (survey during onboarding).</description>
    <label>Onboarding Survey Interested Benefit Opt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>