force-app/main/default/objects/ZP_Company__c/fields/Panda_SFDC_time_diff__c.field-meta.xml
<CustomField>
    <fullName>Panda_SFDC_time_diff__c</fullName>
    <formula>(CreatedDate - Created_At__c)*1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Panda - SFDC time diff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>