force-app/main/default/objects/ZP_Company__c/fields/Payroll_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Processing_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payroll Processing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>