force-app/main/default/objects/ZP_Company__c/fields/Product_Experiments__c.field-meta.xml
<CustomField>
    <fullName>Product_Experiments__c</fullName>
    <description>Displays the product experiments shown to the customer in app.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Experiments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>