force-app/main/default/objects/ZP_Company__c/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>