force-app/main/default/objects/ZP_Company__c/fields/Referred_by_Accounting_Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Accounting_Firm_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referred by Accounting Firm ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>