force-app/main/default/objects/ZP_Company__c/fields/Selected_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Selected_Benefits__c</fullName>
    <description>Selected benefits (401K, HI, WC) during Onboarding - Populated from Panda/Kafka - CompanyOnboardingPackageRecommendations</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Selected Benefits</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>