force-app/main/default/objects/ZP_Company__c/fields/When_to_start_offering_benefits__c.field-meta.xml
<CustomField>
    <fullName>When_to_start_offering_benefits__c</fullName>
    <description>Associated with &quot;When do they want to start offering benefits?&quot; onboarding questions.</description>
    <label>When to start offering benefits?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AS_SOON_AS_POSSIBLE</fullName>
            </value>
            <value>
                <fullName>THREE_MONTHS</fullName>
            </value>
            <value>
                <fullName>SIX_MONTHS</fullName>
            </value>
            <value>
                <fullName>NOT_SURE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>